2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-unknown-key.c:
    * libseahorse/seahorse-unknown-key.h: Added "stock-id" property 
    for looking up icon against the SeahorseKey.
    
2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-ssh-agent.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-ssh-key-data.c:
    * libseahorse/seahorse-ssh-key-data.h:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-ssh-source.h:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * plugins/nautilus/seahorse.xml:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Add support for exporting and 
    importing SSH keys. Add support for setting authorization on keys. 
    Fixes #352087, #351862
    
2006-08-20  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-ssh-agent.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-algo.c (added):
    * libseahorse/seahorse-algo.h (added):
    * libseahorse/seahorse-ssh-key-data.c (added):
    * libseahorse/seahorse-ssh-key-data.h (added):
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c: Parse our own SSH keys. This is 
    more efficient and also allows us to eventually parse files like
    ~/.ssh/authorized_keys. Also remove half-baked SSH1 (ie: RSA1) support.
    