@@ -6,7 +6,7 @@
 
 <widget class="GtkDialog" id="agent-cache">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Cached Encryption Passphrases</property>
+  <property name="title" translatable="yes">Cached Encryption Keys</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER</property>
   <property name="modal">False</property>
@@ -20,6 +20,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <property name="has_separator">False</property>
 
   <child internal-child="vbox">
