@@ -1,3 +1,13 @@
+2006-08-22  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * agent/seahorse-agent-cache.c:
+    * agent/seahorse-agent-cache.glade:
+    * agent/seahorse-agent-ssh.c:
+    * agent/seahorse-agent-status.c:
+    * agent/seahorse-agent.h: Make SSH keys show up in agent. Fixes #345990
+    * libseahorse/seahorse-context.c: Minor context fixes.
+    * libseahorse/seahorse-unknown-key.c: Put stock-id property in right place
+    
 2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-key-store.c:
